config/k8s/infrastructure-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: infrastructure-service
  namespace: devsecops
spec:
  selector:
    app: infrastructure-service
  ports:
    - name: http
      port: 3002
      targetPort: 3002
    - name: metrics
      port: 9102
      targetPort: 9102
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infrastructure-service
  namespace: devsecops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: infrastructure-service
  template:
    metadata:
      labels:
        app: infrastructure-service
    spec:
      containers:
        - name: infrastructure-service
          image: pikafoc/skanderdevsopp-infrastructure-service
          ports:
            - containerPort: 3002
            - containerPort: 9102
