config/k8s/logstash.yaml
apiVersion: v1
kind: Service
metadata:
  name: logstash
  namespace: devsecops
spec:
  selector:
    app: logstash
  ports:
    - name: http
      port: 9600
      targetPort: 9600
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
  namespace: devsecops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app: logstash
    spec:
      containers:
        - name: logstash
          image: docker.elastic.co/logstash/logstash:8.12.2
          ports:
            - containerPort: 9600
          volumeMounts:
            - name: pipeline
              mountPath: /usr/share/logstash/pipeline
      volumes:
        - name: pipeline
          configMap:
            name: logstash-pipeline
