config/k8s/monitor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitor-service
  namespace: devsecops
spec:
  selector:
    app: monitor-service
  ports:
    - name: http
      port: 3004
      targetPort: 3004
    - name: metrics
      port: 9104
      targetPort: 9104
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitor-service
  namespace: devsecops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monitor-service
  template:
    metadata:
      labels:
        app: monitor-service
    spec:
      containers:
        - name: monitor-service
          image: pikafoc/skanderdevsopp-monitor-service
          ports:
            - containerPort: 3004
            - containerPort: 9104
